컨트롤러 추가 성공: TestController1 추가로 사용

--- a/ASPMVC_Practice/Views/Shared/_Layout.cshtml
+++ b/ASPMVC_Practice/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test1">Test1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TestController1" asp-action="Index">TestController1_Index</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TestController1" asp-action="Test1">TestController1_Test1</a>
                         </li>
                     </ul>
                 </div>
