View폴더에서 컨트롤러 명과 다른 폴더를 만들고  VIEW.cshtml 만들기

--- a/ASPMVC_Practice/Views/Shared/_Layout.cshtml
+++ b/ASPMVC_Practice/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Test">TestController_Test</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TestController1" asp-action="Index">TestController1_Index</a>
                         </li>
                         <li class="nav-item">
