--- a/ASPMVC_Practice/Views/TestController1/Test1.cshtml
+++ b/ASPMVC_Practice/Views/TestController1/Test1.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "Test1";
+    ViewData["Title"] = "TestController1 Test1";
+    var Title = ViewData["Title"];
 }
 
-<h1>Test1</h1>
+<h1>@Title</h1>
 
