--- a/ASPMVC_Practice/Views/Shared/_Layout.cshtml
+++ b/ASPMVC_Practice/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TestController1" asp-action="Test1">TestController1_Test1</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CalebDiary" asp-action="Index">CalebDiary_Index</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
