--- a/ASPMVC_Practice/wwwroot/css/CalebDiary.css
+++ b/ASPMVC_Practice/wwwroot/css/CalebDiary.css
@@ -6,15 +6,15 @@
 }
 
 .default_box {
-    width: 70%;
-    height: 1200px;
-    background-color: #666666;
-    float: left;
+    width: 100%;
+    height: 40%;
+    background-color: #00ffff;
+    float: inline-start;
     position: relative;
     z-index: -4;
-    margin-left: 10%;
+    /*margin-left: 10%;*/
 }
-
+/*
     .default_box > h1 {
         width: 100%;
         height: 5%;
@@ -41,5 +41,6 @@
 
     .default_box > .income_chart {
         width: 70%;
-        height: 400px;
+        height: 50%;
     }
+    */
