--- a/ASPMVC_Practice/Views/CalebDiary/Index.cshtml
+++ b/ASPMVC_Practice/Views/CalebDiary/Index.cshtml
@@ -27,7 +27,7 @@
     </header>
     <section>
         <!--<jsp:include page="../../01.IncludePage/Accordion_ManagerMyPage.jsp" />-->
-        <div class="default_box">
+        <div class="default_box" style="padding: 2em 2em; margin: 2em 0; font-weight: bold; color: #5B8BD0; background: #FFF; border: solid 3px #5B8BD0; border-radius: 10px;">
             <h1>Keyword 언급 횟수</h1>
             <div class="manager_info">
                 <div class="income_chart">
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <div class="listView">
+        <div class="listView" style="padding: 2em 2em; margin: 2em 0; font-weight: bold; border: solid 3px #5B8BD0;">
             <table class="table table-bordered">
                 <thead>
                     <tr>
