--- a/ASPMVC_Practice/Views/Home/Index.cshtml
+++ b/ASPMVC_Practice/Views/Home/Index.cshtml
@@ -6,3 +6,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div>
+    여기에 VIEW에서 나온 값 출력하고 싶을 때 
+    <p>@ViewBag.str</p>
+
+</div>
